tests/errors/test-error-location.sac
// SAC_TEST|include common.mk
// SAC_TEST|SAC2C_FLAGS += -check tc -b 1:prs
// SAC_TEST|CALL_SAC2C := $(SAC2C) $(SAC2C_FLAGS)
//
// SAC_TEST|all: <file-name>
// SAC_TEST|<tab>OUTPUT=`$(CALL_SAC2C) $< 2>&1`; <nlslash>
// SAC_TEST|<tab>echo "$$OUTPUT" | grep -E "^.*:[[:digit:]]+:[[:digit:]]+: error:$$" | $(GREP_COMMAND_OUTPUT) "" 3; <nlslash>

// Test the function CTIerror and the underlying CTF functions with complete location information.

int main () {
  return 0; This text leads to a syntax error
}